--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	}
-	war{
-		archiveFileName = "jenkin.war"
+	jar {
+	    archiveFileName = "jenkin.jar"
 	}
 	tasks.named('test') {
 		useJUnitPlatform()
