--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
               --name $CLUSTER_NAME \
               --version 1.28 \
               --nodes 1 \
-              --node-type t2.micro \
+              --node-type t2.small \
               --region $REGION \
               --zones ${ZONES:-"us-west-2a,us-west-2b,us-west-2c"}
           fi
