--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,13 +78,13 @@ jobs:
       - name: Set up kubeconfig
         run: |
           echo "Setting up kubeconfig for Kubernetes deployment..."
-          eksctl utils write-kubeconfig --cluster=naveen-cluster --region=${{ secrets.AWS_REGION }}
+          eksctl utils write-kubeconfig --cluster=naveen-demo2-cluster --region=${{ secrets.AWS_REGION }}
         
       # Step 9: Reauthenticate kubectl using AWS credentials
       - name: Reauthenticate kubectl
         run: |
           echo "Reauthenticating kubectl with AWS credentials..."
-          aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name naveen2-cluster
+          aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name naveen-demo2-cluster
 
       # Step 10: Update Kubernetes Deployment in EKS
       - name: Update EKS deployment
