--- a/k8s.yml
+++ b/k8s.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: MonoDeployment
+  namespace: mynamespace
 spec:
   replicas: 2
   selector:
@@ -13,7 +14,7 @@ spec:
         app: MySelectorTemplate
     spec:
       containers:
-        - name: your-container-name
-          image: ${ECR_REPOSITORY_URI}:${GITHUB_SHA}
+        - name: naveencontainer
+          image: 423623829923.dkr.ecr.us-east-1.amazonaws.com/naveenrepo:latest
           ports:
             - containerPort: 8080
