--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Docker Buildx (for building multi-platform images)
+      # Step 2: Set up Docker Buildx (optional, for multi-platform support)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -24,51 +24,43 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: us-east-1
 
-      # Step 4: Install eksctl
-      - name: Install eksctl
-        run: |
-          echo "Installing eksctl for EKS cluster management..."
-          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
-          sudo mv /tmp/eksctl /usr/local/bin
-
-      # Step 5: Set up kubeconfig for Kubernetes deployment
-      - name: Set up kubeconfig
-        run: |
-          echo "Setting up kubeconfig for Kubernetes deployment..."
-          eksctl utils write-kubeconfig --cluster=naveen-demo2-cluster --region=${{ secrets.AWS_REGION }}
-
-      # Step 6: Apply Kubernetes deployment
-      - name: Apply Kubernetes deployment
-        run: |
-          echo "Applying Kubernetes deployment using kubectl..."
-          kubectl apply -f ./k8s.yml
-
-      # Step 7: Reauthenticate kubectl using AWS credentials
-      - name: Reauthenticate kubectl
-        run: |
-          echo "Reauthenticating kubectl with AWS credentials..."
-          aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name naveen-demo2-cluster
-
-      # Step 8: Build the project and generate the JAR file
+      # Step 7: Build the project and generate the JAR file
       - name: Build JAR file with Gradle
         run: |
           echo "Building the JAR file using Gradle..."
           chmod +x ./gradlew
           ./gradlew build
 
-      # Step 9: Build and push Docker image to ECR
-      - name: Build and push Docker image to ECR
+      # Step 8: Log in to ECR
+      - name: Log in to ECR
         run: |
-          echo "Logging in to ECR and building Docker image..."
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REPOSITORY_URI }}
-          docker build -t ${{ secrets.ECR_REPOSITORY_URI }}:$GITHUB_SHA .
-          docker push ${{ secrets.ECR_REPOSITORY_URI }}:$GITHUB_SHA
+          echo "Logging in to ECR..."
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 423623829923.dkr.ecr.us-east-1.amazonaws.com
 
-      # Step 10: Update Kubernetes deployment
-      - name: Update EKS deployment
+      # Step 9: Build and tag Docker image
+      - name: Build and tag Docker image
         run: |
-          echo "Updating Kubernetes deployment with new image..."
-          kubectl set image deployment/mono-deployment naveencontainer=${{ secrets.ECR_REPOSITORY_URI }}:$GITHUB_SHA
+          echo "Building and tagging Docker image..."
+          docker build -t naveenrepo .
+          docker tag naveenrepo:latest 423623829923.dkr.ecr.us-east-1.amazonaws.com/naveenrepo:latest
+
+      # Step 10: Push Docker image to ECR
+      - name: Push Docker image to ECR
+        run: |
+          echo "Pushing Docker image to ECR..."
+          docker push 423623829923.dkr.ecr.us-east-1.amazonaws.com/naveenrepo:latest
+
+      # Step 11: Apply Kubernetes deployment
+      - name: Apply Kubernetes deployment
+        run: |
+          echo "Applying Kubernetes deployment..."
+          kubectl apply -f k8s.yml
+
+      # Step 12: Update deployment image
+      - name: Update deployment image
+        run: |
+          echo "Updating deployment image..."
+          kubectl set image deployment/mono-deployment naveencontainer=423623829923.dkr.ecr.us-east-1.amazonaws.com/naveenrepo:latest
           kubectl rollout status deployment/mono-deployment
