--- a/k8s.yml
+++ b/k8s.yml
@@ -22,7 +22,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-selector-app
+  name: myapp-service
 spec:
   selector:
     app: my-selector-app
