--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+      # Step 6: Update kubeconfig
+      - name: Update kubeconfig
+        run: |
+          echo "Updating kubeconfig..."
+          aws eks --region us-east-1 update-kubeconfig --name naveen-cluster    
+
       # Step 7: Build the project and generate the JAR file
       - name: Build JAR file with Gradle
         run: |
@@ -56,7 +62,7 @@ jobs:
       - name: Apply Kubernetes deployment
         run: |
           echo "Applying Kubernetes deployment..."
-          kubectl apply -f k8s.yml
+          kubectl apply -f k8s.yml --validate=false
 
       # Step 12: Update deployment image
       - name: Update deployment image
